# flikr-scraper

./: .gitignore  Cargo.toml  README.md
src/: downloader.rs  err.rs  extract_v2.js  flikr_extractor.rs  flikr_js_extractor.rs  flikr_url.rs  lib.rs  utils.rs  viewer_gen.rs
src/html/: viewer.css  viewer.html  viewer.js
